--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       };
 
       try {
-        const response = await fetch("http://localhost:3000/send", {
+        const response = await fetch("https://contact-server-1-b3s1.onrender.com", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify(data)
